--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@angular/router": "^17.0.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "postcss": "^8.5.2",
     "rxjs": "~7.8.0",
     "tailwindcss": "^3.4.17",
     "tslib": "^2.3.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.14.2"
   },
   "devDependencies": {
