--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.7.9",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
+    "ngx-image-compress": "^18.1.5",
     "postcss": "^8.5.2",
     "rxjs": "~7.8.0",
     "tailwindcss": "^3.4.17",
